[package]
name = "tiny-webdav"
version = "0.1.0"
edition = "2021"
description = "A tiny, read-only WebDAV server run under inetd/xinetd, with TLS terminated by stunnel"
license = "MIT"

[[bin]]
name = "tiny-webdav"
path = "src/main.rs"

# No TLS dependency: TLS (and client-certificate verification) is terminated by
# stunnel in front of us; we speak plaintext HTTP on the inherited socket.
[dependencies]

# Unix privilege dropping (chroot + setuid/setgid) and the inherited socket.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"     # optimize for size (we're I/O-bound; sendfile does the work)
lto = true         # cross-crate dead-code elimination
codegen-units = 1  # whole-program optimization, at the cost of build time
panic = "abort"    # no unwinding tables; a panic just aborts the connection process
strip = true
